# mobject

./: CMakeLists.txt  README.md  initial-setup.json
examples/: CMakeLists.txt  admin.cpp  client.cpp  server.cpp
include/mobject/: Admin.hpp  AsyncRequest.hpp  Backend.hpp  Client.hpp  Exception.hpp  Provider.hpp  ProviderHandle.hpp  RequestResult.hpp  SequencerHandle.hpp  UUID.hpp
src/: Admin.cpp  AdminImpl.hpp  AsyncRequest.cpp  AsyncRequestImpl.hpp  Backend.cpp  BedrockModule.cpp  CMakeLists.txt  Client.cpp  ClientImpl.hpp  Provider.cpp  ProviderImpl.hpp  SequencerHandle.cpp  SequencerHandleImpl.hpp  mobject-admin.pc.in  mobject-client.pc.in  mobject-config.cmake.in  mobject-server.pc.in
src/dummy/: DummyBackend.cpp  DummyBackend.hpp
tests/: AdminTest.cpp  CMakeLists.txt  ClientTest.cpp  Main.cpp  SequencerTest.cpp
